# hybridsystem

./: LICENSE  README.md  install.sh
config/: defaults.conf
docs/: COMMANDS.md  CUSTOMIZATION.md  HEALTH-MODULE.md  SETUP.md  TROUBLESHOOTING.md
scripts/: brain-dump.sh  morning-briefing.sh  process-card.sh  process-journal.sh  status-check.sh
scripts/core/: accountability-check.sh  brain-dump.sh  energy-check.sh  morning-briefing.sh  process-card.sh  process-journal.sh  status-check.sh
scripts/optional/: deep-work.sh  health-check.sh  health-coaching.sh  weekly-review.sh
windows-productivity/: README.md  package.json  pyproject.toml
windows-productivity/.claude/: settings.json
windows-productivity/.claude/commands/: analyze-patterns.md  brief.md
windows-productivity/config/: defaults.json
windows-productivity/docs/: ARCHITECTURE.md  CUSTOMIZATION.md  SETUP.md
windows-productivity/src/: cli.ts  index.ts  types.ts
windows-productivity/src/core/: agent.ts  config.ts  state.ts
windows-productivity/src/tools/: productivity.ts
windows-productivity/src/utils/: windows.ts
windows-productivity/src/watchtower/: __init__.py  cli.py  types.py
windows-productivity/src/watchtower/core/: __init__.py  agent.py  config.py  state.py
windows-productivity/src/watchtower/tools/: __init__.py  productivity.py
windows-productivity/src/watchtower/utils/: __init__.py  windows.py
