[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchtower-windows"
version = "1.0.0"
description = "Windows productivity system powered by Claude Agent SDK - A hybrid physical-digital workflow companion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
keywords = [
    "productivity",
    "claude",
    "agent-sdk",
    "windows",
    "task-management"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
watchtower = "watchtower.cli:main"

[project.urls]
Homepage = "https://github.com/your-repo/watchtower-windows"
Documentation = "https://github.com/your-repo/watchtower-windows#readme"
Repository = "https://github.com/your-repo/watchtower-windows"

[tool.hatch.build.targets.wheel]
packages = ["src/watchtower"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
